// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render ListEntry correctly 1`] = `
<a
  className="individualPic"
  href="/?id=0"
>
  <div>
    <img
      className="img"
      src="path0.jpg"
    />
    <p
      className="location"
    >
      house
       · 
      Berlin
    </p>
    <p
      className="description"
    >
      sunny0
    </p>
    <p
      className="price"
    >
      $
      250
       per night
    </p>
    <div
      className="starsOuter"
    >
      <div
        className="starsInner"
        style={
          Object {
            "width": "22%",
          }
        }
      />
    </div>
    <span
      className="votes"
    >
      4
    </span>
  </div>
</a>
`;

exports[`render ListOfHomes correctly 1`] = `
<div
  className="flex-container"
>
  <button
    className="leftScroll"
    onClick={[Function]}
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    &lt;
  </button>
  <a
    className="individualPic"
    href="/?id=0"
  >
    <div>
      <img
        className="img"
        src="path0.jpg"
      />
      <p
        className="location"
      >
        house
         · 
        Berlin
      </p>
      <p
        className="description"
      >
        sunny0
      </p>
      <p
        className="price"
      >
        $
        250
         per night
      </p>
      <div
        className="starsOuter"
      >
        <div
          className="starsInner"
          style={
            Object {
              "width": "22%",
            }
          }
        />
      </div>
      <span
        className="votes"
      >
        4
      </span>
    </div>
  </a>
  <a
    className="individualPic"
    href="/?id=1"
  >
    <div>
      <img
        className="img"
        src="path1.jpg"
      />
      <p
        className="location"
      >
        house
         · 
        Berlin
      </p>
      <p
        className="description"
      >
        sunny1
      </p>
      <p
        className="price"
      >
        $
        251
         per night
      </p>
      <div
        className="starsOuter"
      >
        <div
          className="starsInner"
          style={
            Object {
              "width": "32%",
            }
          }
        />
      </div>
      <span
        className="votes"
      >
        4
      </span>
    </div>
  </a>
  <button
    className="rightScroll"
    onClick={[Function]}
    style={
      Object {
        "visibility": "visible",
      }
    }
  >
    &gt;
  </button>
</div>
`;

exports[`render StarRating correctly 1`] = `
<div
  className="starsOuter"
>
  <div
    className="starsInner"
    style={
      Object {
        "width": "22%",
      }
    }
  />
</div>
`;

exports[`simulate button click 1`] = `"<a href=\\"/?id=0\\" class=\\"individualPic\\"><div><img class=\\"img\\" src=\\"path0.jpg\\"/><p class=\\"location\\">house · Berlin</p><p class=\\"description\\">sunny0</p><p class=\\"price\\">$250 per night</p><div class=\\"starsOuter\\"><div class=\\"starsInner\\" style=\\"width:22%\\"></div></div><span class=\\"votes\\">4</span></div></a>"`;

exports[`simulate button click 2`] = `"<a href=\\"/?id=1\\" class=\\"individualPic\\"><div><img class=\\"img\\" src=\\"path1.jpg\\"/><p class=\\"location\\">house · Berlin</p><p class=\\"description\\">sunny1</p><p class=\\"price\\">$251 per night</p><div class=\\"starsOuter\\"><div class=\\"starsInner\\" style=\\"width:32%\\"></div></div><span class=\\"votes\\">4</span></div></a>"`;

exports[`simulate button click 3`] = `"<a href=\\"/?id=0\\" class=\\"individualPic\\"><div><img class=\\"img\\" src=\\"path0.jpg\\"/><p class=\\"location\\">house · Berlin</p><p class=\\"description\\">sunny0</p><p class=\\"price\\">$250 per night</p><div class=\\"starsOuter\\"><div class=\\"starsInner\\" style=\\"width:22%\\"></div></div><span class=\\"votes\\">4</span></div></a>"`;
